# parsing-toys

./: .gitignore  CMakeLists.txt  README.md  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: cpp-unit-test.yml  deploy-pages.yml  python-build-test.yml  wasm-build-test.yml
assets/: ParsingToysWASM--34pfFzK.wasm  ParsingToysWASM-431-mWhr.wasm  ParsingToysWASM-9ukdgrmc.wasm  ParsingToysWASM-BAAbcLCM.wasm  ParsingToysWASM-BD0GIWVc.wasm  ParsingToysWASM-BF-qqz1D.wasm  ParsingToysWASM-BII7FNaE.wasm  ParsingToysWASM-BLH8siqf.wasm  ParsingToysWASM-BSxGmUU7.wasm  ParsingToysWASM-BaRTztoa.wasm  ParsingToysWASM-Bc3qEi2D.wasm  ParsingToysWASM-BuCo65c9.wasm  ParsingToysWASM-C3crYD8d.wasm  ParsingToysWASM-C_v9g92b.wasm  ParsingToysWASM-Ccny1GwJ.wasm  ParsingToysWASM-CiZXDu_2.wasm  ParsingToysWASM-Cj1jvYrD.wasm  ParsingToysWASM-CjR8FFzw.wasm  ParsingToysWASM-ClLNw3EH.wasm  ParsingToysWASM-CtnOkmXx.wasm  ParsingToysWASM-Cz5pomwj.wasm  ParsingToysWASM-D29ZsJ9o.wasm  ParsingToysWASM-D36HX3xQ.wasm  ParsingToysWASM-D40sGILu.wasm  ParsingToysWASM-DIQ7mNnZ.wasm  ParsingToysWASM-DMBIrFwJ.wasm  ParsingToysWASM-DTdCVMCO.wasm  ParsingToysWASM-Ddniyto8.wasm  ParsingToysWASM-DuFhr3By.wasm  ParsingToysWASM-H4sZX7zp.wasm  ParsingToysWASM-O6mAb7eK.wasm  ParsingToysWASM-bZzfJW2J.wasm  ParsingToysWASM-ruJPbHrc.wasm  ParsingToysWASM-wKVkqpsf.wasm  __vite-browser-external-7K-0nqN3.css  __vite-browser-external-BA3rgjw9.css  __vite-browser-external-BVNNUIbt.js  __vite-browser-external-BVau3RSd.css  __vite-browser-external-Bk4BYjil.css  __vite-browser-external-BkM8vzjS.js  (+261 more)
include/: automaton.h  cfg.h  production_trie.h  re.h  string_utils.h
python/tests/: test_cfg.py  test_cyk.py  test_first_follow.py  test_ll1.py  test_lr.py  test_regex.py
src/: automaton.cpp  cfg.cpp  first_and_follow.cpp  left_factor.cpp  left_recursion.cpp  production_trie.cpp  string_utils.cpp
src/cfg/: cfg.cpp  closure.cpp  cnf.cpp  first_and_follow.cpp  lalr.cpp  lalr1.cpp  left_factor.cpp  left_recursion.cpp  ll1.cpp  lr.cpp  lr0.cpp  lr1.cpp  shift_reduce.cpp  slr1.cpp
src/re/: dfa.cpp  graph.cpp  min_dfa.cpp  nfa.cpp
tests/: test_string_utils.cpp
tests/cfg/: test_closure.cpp  test_cnf.cpp  test_cyk.cpp  test_first_and_follow.cpp  test_lalr1.cpp  test_left_factor.cpp  test_left_recursion.cpp  test_ll1.cpp  test_lr.cpp  test_lr0.cpp  test_lr1.cpp  test_parse.cpp  test_primed_symbol.cpp  test_production_trie.cpp  test_slr1.cpp  test_tokenize.cpp
tests/re/: test_min_dfa.cpp  test_nfa.cpp  test_parse_regex.cpp
tools/: cfg_cnf.html  cfg_cyk.html  cfg_first_and_follow.html  cfg_lalr1.html  cfg_left_factoring.html  cfg_left_recursion.html  cfg_ll1.html  cfg_lr0.html  cfg_lr1.html  cfg_reformat.html  cfg_slr1.html  re_min_dfa.html
wasm/: README.md  binding.cpp  build.sh  index.d.ts  index.js  package-lock.json  package.json
wasm/test/: cfg.test.mjs  cyk.test.mjs  first_follow.test.mjs  ll1.test.mjs  lr.test.mjs  regex.test.mjs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/partials/: action_goto_table.html  cfg_editor.html  cfg_input.html  cfg_result.html  choose_examples.html  dark_mode_init.html  finite_automaton.html  footer.html  input_string.html  location_hash.html  lr_steps.html  navbar.html  parse_tree.html
web/src/: action_goto_table.ts  cfg_editor.ts  cfg_result.ts  choose_examples.ts  dark_mode.ts  display_svg.ts  finite_automaton.ts  (+4 more)
(+36 files in other folders)
